# coprthr

./: .gitignore  INSTALL.txt  LICENSE-PETE.txt  LICENSE.txt  Makefile  Makefile.choices  Makefile.in  README.markdown  README.txt  RELEASE-NOTES.txt  config.sub  configure  configure.in  install-message.txt.in  ndk.sh  ndk.sh.in  release.sh  touch_everything  vi-note.txt
doc/: COPRTHR-1.1_Release_Notes.html  COPRTHR-1.1_Release_Notes.txt  app_note_mic_build.html  app_note_mic_build.txt  app_note_programming_parallella_using_stdcl.html  app_note_programming_parallella_using_stdcl.txt  arm-release-notes.txt  coprthr-1.2_release_notes.html  coprthr-1.2_release_notes.txt  coprthr-1.3.1_release_notes.html  coprthr-1.3.1_release_notes.txt  coprthr-1.3_release_notes.html  coprthr-1.3_release_notes.txt  coprthr-1.4.0_release_notes.html  coprthr-1.4.0_release_notes.txt  coprthr-1.5.0_release_notes.html  coprthr-primer-rev1.2.html  coprthr-primer-rev1.3.1.html  coprthr-primer-rev1.3.html  coprthr-primer-rev1.4.html  coprthr_api_ref.html  coprthr_api_ref.txt  coprthr_app_note_android_build.html  coprthr_app_note_android_build.txt  coprthr_primer-1.5.html  coprthr_release_notes-1.5.0.html  coprthr_release_notes-1.5.0.txt  coprthr_release_notes-1.5.1.html  coprthr_release_notes-1.5.1.md  coprthr_release_notes-1.5.1.txt  coprthr_release_notes-1.6.0.html  coprthr_release_notes-1.6.0.txt  stdcl-1.4-c_reference_card.docx  stdcl-1.4-fortran_reference_card.docx  stdcl-manual-rev1.1.html  stdcl-manual-rev1.2.html  stdcl-reference-rev1.3.html  stdcl-reference-rev1.4.html
doc/BDT_NBody_Tutorial/: BDT_OpenCL_Tutorial_NBody-rev2.html  BDT_OpenCL_Tutorial_NBody-rev3.html
doc/coprthr_api_ref/: Makefile  coprthr_api_ref.html  coprthr_api_ref.md  coprthr_api_ref.txt
doc/coprthr_primer/: coprthr_primer_clrpc.md  coprthr_primer_hello_stdcl.md  coprthr_primer_libocl.md  coprthr_primer_overview.md  coprthr_primer_stdcl_examples.md  coprthr_primer_tests.md  coprthr_primer_tools.md
doc/stdcl-manual/: stdcl-manual.html
doc/stdcl_api_ref/: Makefile  stdcl_api_ref.html  stdcl_api_ref.md  stdcl_api_ref.txt
doc/vim_syntax_highlighting/: README  example.vimrc
etc/: ocl.conf
examples/: Makefile.in  clinfo.c
examples/bdt_em3d/: Makefile  em3d_fdtd_gpu_cl_display.cpp
examples/bdt_em3d_e32/: Makefile
examples/bdt_nbody/: Makefile  Makefile.in  Makefile.macos  README.txt  bdt_nbody.cpp  nbody.h  nbody_display.cpp  nbody_display.h  nbody_init.cpp  nbody_kern.cl
examples/bdt_nbody_e32/: Makefile  Makefile.in
examples/bdt_nbody_tutorial/: nbody.c  nbody_output.c
examples/bdt_nbody_tutorial_2/: Makefile  nbody2.c
examples/clcontext_example/: Makefile  clcontext_example.c  hello_stdcl.c
examples/clete_clmulti_array_example/: Makefile  clete_clmulti_array_example.cpp
examples/clete_clvector_example/: Makefile  clete_clvector_example.cpp
examples/clete_intervals/: Makefile  clete_interval_example.cpp  clete_interval_example2.cpp
examples/clete_intervals2/: Makefile  clete_clmulti_array_example.cpp  main_test.cpp
examples/clmulti_array_example/: Makefile  clmulti_array_example.cpp
examples/clopen_example/: Makefile  clopen_example1.c  clopen_example2.c  clopen_example3.c
examples/clvector_example/: Makefile  Makefile.in  clvector_example.cpp
examples/hello_opencl/: hello_opencl.c
examples/hello_stdcl/: Makefile  Makefile.in  hello_stdcl.c  hello_stdcl.f90
examples/image2d_example/: Makefile  Makefile.in  image2d_example.c
examples/mpi_lock_example/: Makefile  Makefile.in  mpi_lock_example.c
examples/parallella/: Makefile.in
include/: Makefile.in  _version.h  clproc.h  elf.h  printcl.h  sys_elf.h  version.h
include/CL/: cl.h  cl_platform.h.1.0  opencl.h
include/hide/: libelf.h
libs/libocl/: Makefile  TODO  __vcore_rt.c  __vcore_rt.ll  bdt_builtins_x86_64.c  cmdcall_x86_64.c  compiler.h  compiler_atigpu.c  compiler_x86_64.c  device.c  junk.c  kernel.c  memobj.c  no  platform.c  program.c  program.c.ucontext  vcore.c  vcore.c.1  vcore.c.ucontext  vcore.h  vcore.h.ucontext  version.h  watermark.c  xcl_context.c  xcl_memobj.c  xcl_program.c  xcl_structs.h
libs/libstdcl/: INSTALL  INSTALL.install-only  Makefile  Makefile.debug  Makefile.install-only  README  TODO  clarg.c  clarg.h  clarg_set.3  clarg_set_local.3  clclose.3  clcontext.c  clcontext.h  clfcn.c  clfcn.h  clfork.3  clfree.3  clinit.c  clload.3  clmalloc.3  clmalloc.c  clmalloc.h  clmattach.3  clmsync.3  clndrange_init.3  clndrange_set.3  clopen.3  clsched.c  clsched.h  clwait.3  stdcl.3  stdcl.h
msvs2010/boost_1_47_0-multi_array-iterator-fix/: README.txt  iterator-diff.txt  iterator.hpp
msvs2010/examples/: examples.sln
msvs2010/installer/: Installer.vdproj
msvs2010/libstdcl/: dllmain.c  fix_windows.h  libstdcl.c  libstdcl.h  libstdcl.sln  libstdcl.vcxproj  libstdcl.vcxproj.filters  stdafx.c
msvs2010/test/: test.sln
scripts/: install_coprthr_parallella.sh  uninstall_coprthr_parallella.sh
src/CLETE/: CreateLeaf.h  Functors.h  Interval.h  Makefile  Makefile.in  PETE.h  PrintF.h  PrintType.h  Wrapper.h  clarray_CLETE.h  clmulti_array_CLETE.h  clmulti_array_interval_CLETE.h  clvector_CLETE.h  clvector_interval_CLETE.h
src/coprthr-common/: elf_cl.h  ocl_command_queue.c  ocl_context.c  ocl_device.c  ocl_enqueue.c  ocl_event.c  ocl_kernel.c  ocl_memobj.c  ocl_platform.c  ocl_profile.c  ocl_program.c  ocl_types.h  xcl_icd.c
src/libclelf/: Makefile.in  clelf.c  clelf.h  clelf_md5.c  util.h
src/libclrpc/: Makefile.in  clean  clrpc.h  clrpc.rpc  clrpc_common.c  clrpc_common.h  clrpc_test_cli.c  clrpc_test_cli2.c  clrpcd.c  go  libclrpc.c  ocl.conf  util.h
src/libcoprthr-a/: Makefile.in  cmdsched.c  platform.c  program.c  program.h  ser_engine.c  sl_engine.c  upgrades.txt
src/libcoprthr-arm/: Makefile  Makefile.in  __libcoprthr.h  __vcore_rt.c  cmdcall_atigpu.h  command_queue.h  compiler.h  compiler_arm.c  device.c  elf_cl.c  fast_setjmp.h  foo.c  ircompiler_atigpu.c  program.c  vcore.c  xcl_extension.c  xcl_kernel.c
src/libcoprthr-ax/: Makefile.in  cmdcall.h  cmdcall_arm.h  (+15 more)
test/: Makefile  Makefile.in
(+786 files in other folders)
